Added collapsible stunts and fixed vanishing buttons

--- a/src/scss/components/item/item.scss
+++ b/src/scss/components/item/item.scss
@@ -14,6 +14,17 @@
     }
 }
 
+.fatex__item__collapsible {
+    display: flex;
+    align-items: center;
+
+    position: absolute;
+    height: 100%;
+    top: 0;
+    right: 20px;
+    text-shadow: 1px 1px 2px $shadow-color;
+}
+
 .fatex__item__add {
     @include fa-icon($fa-var-plus);
     cursor: pointer;
@@ -37,6 +48,16 @@
 .fatex__item__sort {
     @include fa-icon($fa-var-sort);
     cursor: move;
+}
+
+.fatex__item__collapse {
+    @include fa-icon($fa-var-chevron-down);
+    cursor: pointer;
+}
+
+.fatex__item__collapse--closed {
+    @include fa-icon($fa-var-chevron-up);
+    cursor: pointer;
 }
 
 .fatex__item__delete {
