--- a/src/scss/components/skills/skills.scss
+++ b/src/scss/components/skills/skills.scss
@@ -16,6 +16,7 @@
     width: 100%;
     padding: $component-padding $component-padding / 2;
     cursor: pointer;
+    display: inline-block;
 }
 
 .fatex__skill--filler {
