Enabled editor for stunts and extras, fixed dice tray module

--- a/src/scss/extras/foundry-ui.scss
+++ b/src/scss/extras/foundry-ui.scss
@@ -6,8 +6,7 @@
 #chat-log .message,
 #chat-form textarea,
 #chat-controls div.roll-type-select select,
-.sidebar-tab .directory-header .header-search input,
-.sidebar-tab button {
+.sidebar-tab .directory-header .header-search input {
     background: $sheet-background;
 }
 
