--- a/src/scss/components/settings/settings.scss
+++ b/src/scss/components/settings/settings.scss
@@ -105,16 +105,13 @@ input[type="text"].fatex__setting__range__value {
     }
 }
 
-.fatex__setting__editor {
-    min-height: 200px;
-    display: flex;
+.fatex__setting__editor__editor {
+    height: 150px;
+    border-bottom: 1px solid $primary-color;
+    border-radius: 3px;
 
     > .editor {
-        width: 100%;
-        min-height: 200px;
-
-        border-bottom: 1px solid $primary-color;
-        border-radius: 3px;
+        height: 150px;
     }
 }
 
