--- a/system/templates/item/parts/settings/setting-editor.html
+++ b/system/templates/item/parts/settings/setting-editor.html
@@ -6,6 +6,8 @@
     <label class="fatex__input fatex__setting__editor" for="{{ fieldName }}">
         {{#if help}}<span class="fatex__setting__help">{{localize help}}</span>{{/if}}
 
-        {{editor content=field target=fieldName button=true owner=owner editable=editable}}
+        <div class="fatex__setting__editor__editor">
+            {{editor content=field target=fieldName button=true owner=owner editable=editable}}
+        </div>
     </label>
 </div>
