--- a/src/scss/components/input/input.scss
+++ b/src/scss/components/input/input.scss
@@ -57,3 +57,10 @@
     color: #2f3542;
     text-shadow: 1px 1px 1px $sheet-background;
 }
+
+[contentEditable="true"]:empty:not(:focus):before {
+    content: attr(data-placeholder);
+    font-style: italic;
+    opacity: 0.3;
+    pointer-events: none;
+}
