--- a/system/templates/actor/parts/tabs/extras.html
+++ b/system/templates/actor/parts/tabs/extras.html
@@ -8,7 +8,7 @@
 
     <div class="fatex__extras__wrapper">
         {{#each extras as |extra extraIndex|}}
-            <div class="fatex__extra item" data-item-id="{{extra._id}}">
+            <div class="fatex__extra item {{#if extra.data.collapsed}}fatex__extra__collapsed{{/if}}" data-item-id="{{extra._id}}">
                 <h2 class="fatex__headline fatex__sortable" data-item-id="{{extra._id}}">
                     <span>{{extra.name}}</span>
 
@@ -17,13 +17,19 @@
                         <span class="fatex__item__settings fatex__extra__settings" data-item="{{extra._id}}"></span>
                         <span class="fatex__item__delete fatex__extra__delete" data-item="{{extra._id}}"></span>
                     </div>
+
+                    <div class="fatex__item__collapsible">
+                        <span class="fatex__item__collapse fatex__stunt__collapse--toggle {{#if stunt.data.collapsed}}fatex__item__collapse--closed{{/if}}" data-item="{{extra._id}}"></span>
+                    </div>
                 </h2>
 
-                {{#ifNotEmpty extra.data.description}}
-                    <div class="fatex__extra__description">
-                        {{{extra.data.description}}}
-                    </div>
-                {{/ifNotEmpty}}
+                {{#unless extra.data.collapsed}}
+                    {{#ifNotEmpty extra.data.description}}
+                        <div class="fatex__extra__description">
+                            {{{extra.data.description}}}
+                        </div>
+                    {{/ifNotEmpty}}
+                {{/unless}}
             </div>
         {{/each}}
     </div>
