Fixed bugs for extras (delete & collapsible)

--- a/system/templates/actor/parts/tabs/extras.html
+++ b/system/templates/actor/parts/tabs/extras.html
@@ -19,7 +19,7 @@
                     </div>
 
                     <div class="fatex__item__collapsible">
-                        <span class="fatex__item__collapse fatex__stunt__collapse--toggle {{#if stunt.data.collapsed}}fatex__item__collapse--closed{{/if}}" data-item="{{extra._id}}"></span>
+                        <span class="fatex__item__collapse fatex__stunt__collapse--toggle {{#if extra.data.collapsed}}fatex__item__collapse--closed{{/if}}" data-item="{{extra._id}}"></span>
                     </div>
                 </h2>
 
