--- a/src/scss/components/skills/skills.scss
+++ b/src/scss/components/skills/skills.scss
@@ -20,6 +20,10 @@
     padding: $component-padding $component-padding / 2;
     cursor: pointer;
     display: inline-block;
+
+    .fatex__helper--enable-editmode & {
+        cursor: default;
+    }
 }
 
 .fatex__skill--filler {
