fix information name style width for Chinese

--- a/src/scss/components/apps/templates/templates.scss
+++ b/src/scss/components/apps/templates/templates.scss
@@ -40,7 +40,7 @@
 
 .fatex__template__information__name {
     font-weight: bold;
-
+    width: 140px;
     &::after {
         content: ":";
     }
