Applied code review recommendations and mass update

--- a/src/scss/components/item/item.scss
+++ b/src/scss/components/item/item.scss
@@ -50,7 +50,7 @@
     cursor: move;
 }
 
-.fatex__item__sortall {
+.fatex__item__sortrank {
     @include fa-icon($fa-var-sort-amount-down);
     cursor: pointer;
 }
