--- a/system/templates/actor/parts/tabs/skills.html
+++ b/system/templates/actor/parts/tabs/skills.html
@@ -3,7 +3,7 @@
         <span>{{localize "FAx.Sheet.Skills"}}</span>
 
         <div class="fatex__item__actions">
-            <span class="fatex__item__sortall fatex__skill__sortall"></span>
+            <span class="fatex__item__sortrank fatex__skill__sortrank"></span>
             <span class="fatex__item__add fatex__skill__add"></span>
         </div>
     </h2>
