Text-Align for template picker table

--- a/src/scss/components/apps/templates/templates.scss
+++ b/src/scss/components/apps/templates/templates.scss
@@ -46,6 +46,10 @@
     }
 }
 
+.fatex__template__information__value {
+    text-align: right;
+}
+
 .fatex__template__actions {
     display: flex;
     flex-direction: column;
