Added italian translation and some css fixes

--- a/src/scss/components/apps/templates/templates.scss
+++ b/src/scss/components/apps/templates/templates.scss
@@ -40,7 +40,8 @@
 
 .fatex__template__information__name {
     font-weight: bold;
-    width: 140px;
+    white-space: nowrap;
+
     &::after {
         content: ":";
     }
