--- a/src/scss/components/tabs/tabs.scss
+++ b/src/scss/components/tabs/tabs.scss
@@ -1,10 +1,26 @@
 .fatex__tabs {
     padding: $component-padding;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.fatex__tabs__content {
+    flex-grow: 1;
+
+    display: flex;
+    flex-direction: column;
 }
 
 .fatex__tabs__tab {
     padding: $component-padding;
     padding-bottom: 0;
+    flex-grow: 1;
+}
+
+.fatex__tabs__tab__content {
+    height: 100%;
+    min-height: 100%;
 }
 
 .fatex__tabs__navigation {
