--- a/system/templates/inline-sheet/character.html
+++ b/system/templates/inline-sheet/character.html
@@ -4,18 +4,20 @@
         <h2 class="fatex__inline_sheet__headline fatex__headline">
             <img alt="{{actor.name}}" data-edit="img" src="{{actor.img}}" />
             <span class="fatex__inline_sheet__headline__name">{{actor.name}}</span>
-            <input class="fatex__inline_sheet__headline__fp" name="data.fatepoints.current" type="number" value="{{data.fatepoints.current}}">
+            {{#unless isToken}}
+                <input class="fatex__inline_sheet__headline__fp" name="data.fatepoints.current" type="number" min="0" max="99" value="{{data.fatepoints.current}}">
+            {{/unless}}
         </h2>
 
         <div class="fatex__inline_sheet__content">
             <div class="fatex__inline_sheet__front">
-                {{> "systems/fatex/templates/inline-actor/parts/aspects.html"}}
+                {{> "systems/fatex/templates/inline-sheet/parts/aspects.html"}}
             </div>
 
-            <div class="fatex__inline_sheet__back">
-                {{> "systems/fatex/templates/inline-actor/parts/consequences.html"}}
-                {{> "systems/fatex/templates/inline-actor/parts/stress.html"}}
-            </div>
+            {{!--<div class="fatex__inline_sheet__back">
+                {{> "systems/fatex/templates/inline-sheet/parts/consequences.html"}}
+                {{> "systems/fatex/templates/inline-sheet/parts/stress.html"}}
+            </div>--}}
         </div>
     </div>
 
