Fixed token adder

--- a/src/styles/components/actor-group/actor-group.scss
+++ b/src/styles/components/actor-group/actor-group.scss
@@ -2,6 +2,6 @@
 }
 
 .fatex__actor_group__settings {
-    position: absolute;
-    visibility: hidden;
+    //position: absolute;
+    //visibility: hidden;
 }
