--- a/system/templates/actor/group.html
+++ b/system/templates/actor/group.html
@@ -1,15 +1,17 @@
 <div class="fatex__actor_group__sheet">
-  <form autocomplete="off" class="{{cssClass}}">
-      <div class="fatex__actor_group__settings">
-          <input class="fatex__header__name__input fatex__input" name="name" type="text" value="{{actor.name}}">
+    <form autocomplete="off" class="{{cssClass}}">
+        <div class="fatex__actor_group__settings">
+            <input class="fatex__header__name__input fatex__input" name="name" type="text" value="{{actor.name}}" />
 
-          {{#each availableTokens}}
-              <div class="fatex__actor_group__createToken" data-token-id="{{this.token.id}}">
-                  <img width="48" src="{{this.img}}" alt="" />
-                  <span>{{this.name}}</span>
-              </div>
-          {{/each}}
-      </div>
-  </form>
-  <div class="fatex__actor_group__inlinesheets"></div>
+            {{#if availableTokens}}
+                {{#each availableTokens}}
+                    <div class="fatex__actor_group__createToken" data-token-id="{{this.token.id}}">
+                        <img width="48" src="{{this.img}}" alt="" />
+                        <span>{{this.name}}</span>
+                    </div>
+                {{/each}}
+            {{/if}}
+        </div>
+    </form>
+    <div class="fatex__actor_group__inlinesheets"></div>
 </div>
