--- a/system/templates/inline-sheet/character.html
+++ b/system/templates/inline-sheet/character.html
@@ -1,4 +1,4 @@
-<form autocomplete="off" class="{{cssClass}}">
+<form autocomplete="off" class="{{cssClass}}" data-id="{{referenceID}}">
 
     <div class="fatex__inline_sheet">
         <h2 class="fatex__inline_sheet__headline fatex__headline">
