--- a/system/templates/actor/group.html
+++ b/system/templates/actor/group.html
@@ -3,13 +3,29 @@
         <div class="fatex__actor_group__settings">
             <input class="fatex__header__name__input fatex__input" name="name" type="text" value="{{actor.name}}" />
 
+            {{#if groupActors}}
+                <div class="fatex__actor_group__actors sortablejs">
+                    {{#each groupActors}}
+                        <div class="fatex__actor_group__actor item" data-item-id="{{this._id}}">
+                            <img width="48" src="{{this.img}}" alt="" />
+                            <span>{{this.name}}</span>
+
+                            <span class="fatex__skill__sort"></span>
+                            <span class="fatex__{{this.type}}__delete fatex__item__delete" data-item="{{this._id}}"></span>
+                        </div>
+                    {{/each}}
+                </div>
+            {{/if}}
+
             {{#if availableTokens}}
-                {{#each availableTokens}}
-                    <div class="fatex__actor_group__createToken" data-token-id="{{this.token.id}}">
-                        <img width="48" src="{{this.img}}" alt="" />
-                        <span>{{this.name}}</span>
-                    </div>
-                {{/each}}
+                <div class="fatex__actor_group__availableTokens">
+                    {{#each availableTokens}}
+                        <div class="fatex__actor_group__createToken" data-token-id="{{this.token.id}}">
+                            <img width="48" src="{{this.img}}" alt="" />
+                            <span>{{this.name}}</span>
+                        </div>
+                    {{/each}}
+                </div>
             {{/if}}
         </div>
     </form>
