--- a/system/templates/actor/group.html
+++ b/system/templates/actor/group.html
@@ -1,20 +1,28 @@
 <div class="fatex__actor_group__sheet">
-    <form autocomplete="off" class="{{cssClass}}">
-        <div class="fatex__actor_group__settings">
-            <input class="fatex__header__name__input fatex__input" name="name" type="text" value="{{actor.name}}" />
-            <input class="fatex__header__name__input fatex__input" name="data.groupType" type="text" value="{{actor.data.groupType}}" />
+    <div class="fatex__actor_group__sheet__content">
+        <div class="fatex__actor_group__inlinesheets"></div>
+        <form autocomplete="off" class="{{cssClass}}">
+            <div class="fatex__actor_group__settings">
+                <input class="fatex__header__name__input fatex__input" name="name" type="text" value="{{actor.name}}" />
+                <input class="fatex__header__name__input fatex__input" name="data.groupType" type="text" value="{{actor.data.groupType}}" />
 
-            {{#if availableTokens}}
-                <div class="fatex__actor_group__availableTokens">
-                    {{#each availableTokens}}
-                        <div class="fatex__actor_group__createToken" data-token-id="{{this.token.id}}">
-                            <img width="48" src="{{this.img}}" alt="" />
-                            <span>{{this.name}}</span>
-                        </div>
-                    {{/each}}
-                </div>
-            {{/if}}
-        </div>
-    </form>
-    <div class="fatex__actor_group__inlinesheets"></div>
+                {{#if availableTokens}}
+                    <div class="fatex__actor_group__availableTokens">
+                        {{#each availableTokens}}
+                            <div class="fatex__actor_group__createToken" data-token-id="{{this.token.id}}">
+                                <img width="48" src="{{this.img}}" alt="" />
+                                <span>{{this.name}}</span>
+                            </div>
+                        {{/each}}
+                    </div>
+                {{/if}}
+            </div>
+        </form>
+    </div>
+
+    <div class="fatex__actor_group__sheet__navigation">
+        <a class="fatex__actor_group__sheet__navigation--front active" data-show="front"><i class="fas fa-theater-masks"></i></a>
+        <a class="fatex__actor_group__sheet__navigation--back" data-show="back"><i class="fas fa-user-injured"></i></a>
+        <a class="fatex__actor_group__sheet__navigation--settings" data-show="settings"><i class="fas fa-cog"></i></a>
+    </div>
 </div>
