--- a/src/styles/components/inline-sheet/inline-sheet.scss
+++ b/src/styles/components/inline-sheet/inline-sheet.scss
@@ -1,16 +1,9 @@
 .fatex__actor_group__inlinesheets {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    //grid-gap: 1px;
-    //background: black;
-    //padding: $component-padding;
 
     form {
         background: $sheet-background;
-        //border: 1px solid black;
-        //background: linear-gradient(180deg, rgba(2, 0, 36, 0) 0%, rgba(236, 236, 255, 1) 66%, rgba(133, 133, 133, 1) 100%);
-        //border-radius: 5px;
-        //box-shadow: 5px 5px 5px 0 rgba(0, 0, 0, 0.33);
     }
 }
 
@@ -40,6 +33,10 @@
     .fatex__inline_sheet--defeated & {
         color: $caution-color;
     }
+
+    .actor_group_overview--settings & {
+        display: none;
+    }
 }
 
 .fatex__inline_sheet__headline input[type="number"].fatex__inline_sheet__headline__fp {
@@ -63,20 +60,35 @@
     -webkit-line-clamp: 2;
 }
 
-.fatex__inline_sheet {
-    //padding: $component-padding / 2;
-}
-
 .fatex__inline_sheet__content {
     display: grid;
+
+    .actor_group_overview--settings & {
+        display: none;
+    }
+
+    > div {
+        visibility: hidden;
+        z-index: 0;
+    }
 }
 
 .fatex__inline_sheet__front {
     grid-column: 1;
     grid-row: 1;
+
+    .actor_group_overview--front & {
+        visibility: visible;
+        z-index: 1;
+    }
 }
 
 .fatex__inline_sheet__back {
     grid-column: 1;
     grid-row: 1;
+
+    .actor_group_overview--back & {
+        visibility: visible;
+        z-index: 5;
+    }
 }
