--- a/src/styles/components/consequences/consequences.scss
+++ b/src/styles/components/consequences/consequences.scss
@@ -55,9 +55,7 @@ div.fatex__consequence--condition {
 }
 
 .fatex__consequence__box__checkbox {
-    position: absolute;
-    opacity: 0;
-    left: -5000px;
+    display: none;
 
     &:checked + .fatex__consequence__box__icon {
         opacity: 1;
