--- a/src/styles/components/stress/stress.scss
+++ b/src/styles/components/stress/stress.scss
@@ -7,9 +7,7 @@
 }
 
 .fatex__stress__track__item__checkbox {
-    position: absolute;
-    opacity: 0;
-    left: -5000px;
+    display: none;
 
     &:checked + .fatex__stress__track__item__icon {
         opacity: 1;
