Fixed token references

--- a/system/templates/actor/group.html
+++ b/system/templates/actor/group.html
@@ -11,7 +11,7 @@
             {{#if availableTokens}}
                 <div class="fatex__actor_group__availableTokens">
                     {{#each availableTokens}}
-                        <div class="fatex__actor_group__createToken" data-token-id="{{this.token.id}}">
+                        <div class="fatex__actor_group__createToken" data-token-id="{{this._id}}">
                             <img width="48" src="{{this.img}}" alt="" />
                             <span>{{this.name}}</span>
                         </div>
